--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -16,7 +16,7 @@
 		"description": "Label on action button."
 	},
 	"actionTitle": {
-		"message": "Move to Trash",
+		"message": "Move message to Trash",
 		"description": "Title of action button."
 	}
 }
